--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anonymous</title>
+    <title>Anonymous Forum</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to the Forum</h1>
+        <h1>Anonymous Forum</h1>
     </header>
 
     <section id="forum-threads">
